added bootstrap to videos to make responsive

--- a/courses.html
+++ b/courses.html
@@ -61,8 +61,10 @@
                                 <hr>
                                 <p>4-Week Course: €60</p>
                                 <p>4-Week Course plus 3 weeks unlimited yoga: €95.</p>
-                                <p>We run a new Intro To Yoga course every four weeks.</p>                               
-                                <img src="assets/images/intro-use.png" alt="Intro" class="courses">
+                                <p>We run a new Intro To Yoga course every four weeks.</p> 
+                                <picture>                               
+                                    <img src="assets/images/intro-use.png" class="img-fluid img-thumbnail" alt="Intro" class="courses">
+                                </picture>
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>
                         </div>
@@ -74,8 +76,10 @@
                                 <hr>
                                 <p>Courses running every 6 weeks</p>
                                 <p>Courses running every 6 weeks</p>
-                                <p>Qualified at the most experienced level of yoga RYT500</p>                           
-                                <img src="assets/images/preg.jpg" alt="Pregnancy" class="courses">
+                                <p>Qualified at the most experienced level of yoga RYT500</p> 
+                                <picture>                           
+                                    <img src="assets/images/preg.jpg" class="img-fluid img-thumbnail" alt="Pregnancy" class="courses">
+                                </picture>
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>        
                         </div>
@@ -88,8 +92,10 @@
                                 <hr>
                                 <p>4-Week Course</p>
                                 <p>Create a calmer, healthier you.</p>
-                                <p>€85 for four-week course</p>                           
-                                <img src="assets/images/meditation2.jpg" alt="Meditation" class="courses">
+                                <p>€85 for four-week course</p> 
+                                <picture>                           
+                                    <img src="assets/images/meditation2.jpg" class="img-fluid img-thumbnail" alt="Meditation" class="courses">
+                                </picture>
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>        
                         </div>
@@ -101,8 +107,10 @@
                                 <hr>
                                 <p>Thursday 13th- Saturday 15th May 2021 10-5pm</p>
                                 <p> continuing education for teachers and advanced students</p>
-                                <p>In-Studio: €290. Online: €285</p>                           
-                                <img src="assets/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
+                                <p>In-Studio: €290. Online: €285</p> 
+                                <picture>                          
+                                    <img src="assets/images/yogateachertraining.jpg" class="img-fluid img-thumbnail" alt="Teacher-Training" class="courses">
+                                </picture>
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>
                         </div>
@@ -121,16 +129,18 @@
                         <!--info for first video-->
                         <h3>5-Minute Morning Yoga</h3>
                         <br />
-                    
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/4C-gxOE0j7s" title="YouTube video player" allowfullscreen></iframe>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4C-gxOE0j7s" title="YouTube video player" allowfullscreen></iframe>
+                        </div>
                         <p>5 Min Morning Yoga With Adriene. Don't have a lot of time? Take 5 to promote healthy flow of energy so that you can do your best, be authentic and Find What Feels Good! </p>
                     </div>
                     <!--info for sceond video-->
                     <div class="col-md-6 video">
                         <h3>12 Minute Core Conditioning</h3>
                         <br />
-                    
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/8T39OBNaNzU" title="YouTube video player" allowfullscreen></iframe>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8T39OBNaNzU" title="YouTube video player" allowfullscreen></iframe>
+                        </div>
                         <p>Two words, FLOOR CORE. Take 12 minutes to build connection to center while strengthening and toning your abdominal muscles. </p>
                     </div>
                 </div>
