--- a/courses.html
+++ b/courses.html
@@ -49,12 +49,11 @@
 </section>
     <hr>
     <section>
-         <!--Title on PAge under hero image-->
+         <!--Title on Page under hero image-->
         <h2 id="welcome" class="margin">Courses</h2>
         <hr>
-            <div class="container" >
-                    <div class="row">
-                        <div class=" col-md-6 box-two" aria-labelledby="yoga-introduction">
+                    <div class="flex-container">                      
+                        <div class="box-two" aria-labelledby="yoga-introduction">
                             <div id="yoga-introduction">
                                 <!--info for introduction courses-->
                                 <h2>Intro To Yoga</h2>
@@ -69,7 +68,7 @@
                             </div>
                         </div>
 
-                        <div class=" col-md-6 box-one" aria-labelledby="pregnancy-yoga">
+                        <div class="box-one" aria-labelledby="pregnancy-yoga">
                             <div id="pregnancy-yoga">
                                 <!--info for pregnancy courses-->
                                 <h2>Pregnancy Yoga</h2>
@@ -84,8 +83,8 @@
                             </div>        
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 box-two" aria-labelledby="meditation">
+                    <div class="flex-container">>
+                        <div class="box-two" aria-labelledby="meditation">
                             <div id="meditation">
                                 <!--info for meditation courses-->
                                 <h2>Meditation</h2>
@@ -99,8 +98,7 @@
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>        
                         </div>
-
-                        <div class="col-md-6 box-one" aria-labelledby="teacher-training">
+                        <div class="box-one" aria-labelledby="teacher-training">
                             <div id="teacher-training">
                                 <!--info for training courses-->
                                 <h2>Advanced Education</h2>
@@ -114,36 +112,33 @@
                                 <a href="contact.html"><h4>Click to Sign Up!</h4></a>
                             </div>
                         </div>
-                    </div>   
-            </div>
+                    </div> 
 </section>
 
 <section class="margin">
-    <div class="container-fluid" >
-                <!--heading for videos-->
-                <p id="teach2">Try it out for yourself!</p>
-                <hr>
-                <br />
-                <div class="grid-container">
-                    <div class="col-md-6 video">
+       <!--heading for videos-->
+       <p id="teach2">Try it out for yourself!</p>
+       <hr>
+       <br />
+    <div class="flex-container" >            
+                    <div class="video">
                         <!--info for first video-->
                         <h3>5-Minute Morning Yoga</h3>
                         <br />
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4C-gxOE0j7s" title="YouTube video player" allowfullscreen></iframe>
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4C-gxOE0j7s" title="YouTube video player"></iframe>
                         </div>
                         <p>5 Min Morning Yoga With Adriene. Don't have a lot of time? Take 5 to promote healthy flow of energy so that you can do your best, be authentic and Find What Feels Good! </p>
                     </div>
                     <!--info for sceond video-->
-                    <div class="col-md-6 video">
+                    <div class="video">
                         <h3>12 Minute Core Conditioning</h3>
                         <br />
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8T39OBNaNzU" title="YouTube video player" allowfullscreen></iframe>
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8T39OBNaNzU" title="YouTube video player"></iframe>
                         </div>
                         <p>Two words, FLOOR CORE. Take 12 minutes to build connection to center while strengthening and toning your abdominal muscles. </p>
                     </div>
-                </div>
     </div>            
 </section>
     <footer class="footer">
