added more flex and responsiveness

--- a/index.html
+++ b/index.html
@@ -56,13 +56,10 @@
         <section class="margin"> 
                
             <div class="flex-container">
-                        <!--image in circle next to What is Yoga-->
-                        <div aria-labelledby="yoga-description">
-                            <div class="pic-container">
+                        <!--image in circle next to What is Yoga-->                       
+                            <div class="pic-container"  aria-labelledby="yoga-description">
                                 <div id="circle-2"></div>
                             </div>
-                        </div>   
-
                             <div id="yoga-description" class ="box-one">
                                  <!--Heading and Text for What is Yoga-->
                                 <h2>What is yoga?</h2>
@@ -94,7 +91,7 @@
             </div>
             <div class="flex-container">    
                
-                                <div  class="col-sm-8 box-two" id="yoga-description">
+                                <div  class="box-two" id="yoga-description">
                                      <!--Heading and Text for why do Yoga-->
                                     <h2>Why Do yoga?</h2>
                                     <hr>
