added flex to nav bar

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 </header>
 <hr>    <!--Hero image-->
 <section id="hero-outer">
-<div id="hero"></div>
+<div id="hero-rest"></div>
 <!--Text In Hero Image-->
 <div id="cover-text">
     <h3>Restore & Revitalize</h3> 
