--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="index.html" id="logo">Transformative Yoga</a>
                 </h1>
                 <!--Nav Bar in Top right of Screen-->
-                <nav id="nav" class="row">
+                <nav id="nav">
                     
                     <a href="index.html" aria-label="Go to top of the page" class="col">Home</a>                       
                     <a href="courses.html" aria-label="Go to the courses page" class="col">Courses</a>
