--- a/instructors.html
+++ b/instructors.html
@@ -39,7 +39,7 @@
 <hr>    
 <!--Hero image-->
 <section id="hero-outer">
-<div id="hero"></div>
+<div id="hero-rest"></div>
 
 <!--Text In Hero Image-->
 <div id="cover-text">
