changed instructors to teachers, add | between nav links

--- a/teachers.html
+++ b/teachers.html
@@ -24,7 +24,7 @@
         <!--Nav Bar in Top right of Screen-->
         <nav id="nav">                    
             <a href="courses.html" aria-label="Go to the courses page">Courses</a>
-            <a href="instructors.html" aria-label="Go to the instructors page">Instructors</a>
+            <a href="teachers.html" aria-label="Go to the instructors page" class="col">Teachers</a>
             <a href="contact.html" aria-label="Go to the contact or sign up page">Contact</a>           
         </nav>
    
