styled courses page

--- a/courses.html
+++ b/courses.html
@@ -48,61 +48,73 @@
                     <div class="flex-container">                      
                         <div class="box-two" aria-labelledby="yoga-introduction">
                             <div id="yoga-introduction">
+                                <br />
                                 <!--info for introduction courses-->
                                 <h2>Intro To Yoga</h2>
                                 <hr>
                                 <p>4-Week Course: €60</p>
                                 <p>4-Week Course plus 3 weeks unlimited yoga: €95.</p>
-                                <p>We run a new Intro To Yoga course every four weeks.</p> 
+                                <p>We run a new Intro To Yoga course every four weeks.</p>
+                                <br /> 
                                 <picture>                               
                                     <img src="assets/images/intro-use.png" class="img-fluid img-thumbnail" alt="Intro" class="courses">
                                 </picture>
-                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                                <br />
+                                <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
                             </div>
                         </div>
 
                         <div class="box-one" aria-labelledby="pregnancy-yoga">
                             <div id="pregnancy-yoga">
+                                <br />
                                 <!--info for pregnancy courses-->
                                 <h2>Pregnancy Yoga</h2>
                                 <hr>
                                 <p>Courses running every 6 weeks</p>
                                 <p>Courses running every 6 weeks</p>
-                                <p>Qualified at the most experienced level of yoga RYT500</p> 
+                                <p>Qualified at the most experienced level of yoga RYT500</p>
+                                <br /> 
                                 <picture>                           
                                     <img src="assets/images/preg.jpg" class="img-fluid img-thumbnail" alt="Pregnancy" class="courses">
                                 </picture>
-                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                                <br />
+                                <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
                             </div>        
                         </div>
                     </div>
                     <div class="flex-container">
                         <div class="box-two" aria-labelledby="meditation">
                             <div id="meditation">
+                                <br />
                                 <!--info for meditation courses-->
                                 <h2>Meditation</h2>
                                 <hr>
                                 <p>4-Week Course</p>
                                 <p>Create a calmer, healthier you.</p>
                                 <p>€85 for four-week course</p> 
+                                <br />
                                 <picture>                           
                                     <img src="assets/images/meditation2.jpg" class="img-fluid img-thumbnail" alt="Meditation" class="courses">
                                 </picture>
-                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                                <br />
+                                <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
                             </div>        
                         </div>
                         <div class="box-one" aria-labelledby="teacher-training">
                             <div id="teacher-training">
+                                <br />
                                 <!--info for training courses-->
                                 <h2>Advanced Education</h2>
                                 <hr>
                                 <p>Thursday 13th- Saturday 15th May 2021 10-5pm</p>
                                 <p> continuing education for teachers and advanced students</p>
                                 <p>In-Studio: €290. Online: €285</p> 
+                                <br />
                                 <picture>                          
                                     <img src="assets/images/yogateachertraining.jpg" class="img-fluid img-thumbnail" alt="Teacher-Training" class="courses">
                                 </picture>
-                                <a href="contact.html"><h4>Click to Sign Up!</h4></a>
+                                <br />
+                                <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
                             </div>
                         </div>
                     </div> 
