styled videos on courses page

--- a/teachers.html
+++ b/teachers.html
@@ -13,7 +13,7 @@
     <!--Style sheet CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Logo Top Left-->
-    <title>Transformative Yoga</title>
+    <title>Teachers</title>
 </head>
 <body>
     <header class="header">
