--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,7 @@
     <!--Style sheet CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Logo Top Left-->
-    <title>Transformative Yoga</title>
+    <title>Courses</title>
 </head>
 <body>
     <header class="header">
