condensed media queries

--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
                                 <p>We run a new Intro To Yoga course every four weeks.</p>
                                 <br /> 
                                 <picture>                               
-                                    <img src="assets/images/intro-use.png" class="img-fluid img-thumbnail" alt="Intro" class="courses">
+                                    <img src="assets/images/intro-use.png" alt="Intro" class="courses">
                                 </picture>
                                 <br />
                                 <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
@@ -75,7 +75,7 @@
                                 <p>Qualified at the most experienced level of yoga RYT500</p>
                                 <br /> 
                                 <picture>                           
-                                    <img src="assets/images/preg.jpg" class="img-fluid img-thumbnail" alt="Pregnancy" class="courses">
+                                    <img src="assets/images/preg.jpg" alt="Pregnancy" class="courses">
                                 </picture>
                                 <br />
                                 <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
@@ -94,7 +94,7 @@
                                 <p>€85 for four-week course</p> 
                                 <br />
                                 <picture>                           
-                                    <img src="assets/images/meditation2.jpg" class="img-fluid img-thumbnail" alt="Meditation" class="courses">
+                                    <img src="assets/images/meditation2.jpg" alt="Meditation" class="courses">
                                 </picture>
                                 <br />
                                 <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
@@ -111,7 +111,7 @@
                                 <p>In-Studio: €290. Online: €285</p> 
                                 <br />
                                 <picture>                          
-                                    <img src="assets/images/yogateachertraining.jpg" class="img-fluid img-thumbnail" alt="Teacher-Training" class="courses">
+                                    <img src="assets/images/yogateachertraining.jpg" alt="Teacher-Training" class="courses">
                                 </picture>
                                 <br />
                                 <a href="contact.html"><p class="signup">Click to Sign Up!</p></a>
@@ -147,8 +147,7 @@
     </div>
     <hr>            
 </section>
-    <footer class="footer">
-       
+    <footer class="footer">       
        <!--Footer links for face book, instagram, and email. I got the icons from fontawesome-->
         <a href="https://www.instagram.com/radicaltransformationyoga/" aria-label="Go to our instagram page" target="_blank"> <i class="fab fa-instagram fa-3x" ></i> </a>               
         <a href="https://www.facebook.com/Radicaltransformationyoga" aria-label="Go to our facebook page" target="_blank"> <i class="fab fa-facebook-square fa-3x"></i> </a>
