--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <form id="contact-form">
                 <label for="fullName">Name</label>
                 <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
-                <label for="email">Email</label>
+                <label for="eMail">Email</label>
                 <input type="email" id="eMail" name="eMail" placeholder="Please enter your email">
                 <label for="mobile">Mobile</label>
                 <input type="text" id="mobile" name="mobile" placeholder="Please enter your mobile number">
@@ -67,8 +67,8 @@
         </div>
             <!--Google Maps for studio location, just picked a random yoga studio for refrence. I took the map from google maps and copied the embeded code and aded it to the grid container-->
         <div>
-            <div class="col-md-6 map-container" aria-labelledby="find-us">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" id="find-us"></iframe>
+            <div class="map" aria-labelledby="find-us">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" id="find-us"></iframe>
                 <br />
                 <strong>Due to Covid-19 our studios are currently closed.</strong>
             </div>
@@ -77,9 +77,7 @@
         <br />
         <hr>
 </section>
-
-    <footer class="footer">
-      
+    <footer class="footer">     
            <!--Footer links for face book, instagram, and email. I got the icons from fontawesome-->
         <a href="https://www.instagram.com/radicaltransformationyoga/" aria-label="Go to our instagram page" target="_blank"> <i class="fab fa-instagram fa-3x" ></i> </a>               
         <a href="https://www.facebook.com/Radicaltransformationyoga" aria-label="Go to our facebook page" target="_blank"> <i class="fab fa-facebook-square fa-3x"></i> </a>   
