--- a/contact.html
+++ b/contact.html
@@ -1,87 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--META Data-->
-    <meta name="description" content="radical transformation yoga, ireland">
-    <meta name="keywords" content="yoga, breathe work, ireland, transformation">
-    <!--browser icon-->   
-    <link rel="icon" href="assets/images/favicon.ico">
-    <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
-    <!--Style sheet CSS-->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!--Logo Top Left-->
-    <title>Contact</title>
-</head>
-<body>
-    <header class="header">
-        <!--Logo Header in top left of screen-->
-        <h1> 
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--META Data-->
+      <meta name="description" content="radical transformation yoga, ireland">
+      <meta name="keywords" content="yoga, breathe work, ireland, transformation">
+      <!--browser icon-->   
+      <link rel="icon" href="assets/images/favicon.ico">
+      <script src="https://kit.fontawesome.com/6d30fc82e7.js" crossorigin="anonymous"></script>
+      <!--Style sheet CSS-->
+      <link rel="stylesheet" href="assets/css/style.css">
+      <!--Logo Top Left-->
+      <title>Contact</title>
+   </head>
+   <body>
+      <header class="header">
+         <!--Logo Header in top left of screen-->
+         <h1> 
             <a href="index.html" id="logo">Transformative Yoga</a>
-        </h1>
-        <!--Nav Bar in Top right of Screen-->
-        <nav id="nav">                    
+         </h1>
+         <!--Nav Bar in Top right of Screen-->
+         <nav id="nav">                    
             <a href="courses.html" aria-label="Go to the courses page">Courses</a>
             <a href="teachers.html" aria-label="Go to the instructors page" class="col">Teachers</a>
             <a href="contact.html" aria-label="Go to the contact or sign up page">Contact</a>          
-        </nav>
-   
-</header>
-<hr>    <!--Hero image-->
-<section id="hero-outer">
-<div id="hero-rest"></div>
-<!--Text In Hero Image-->
-<div id="cover-text">
-    <h3>Restore & Revitalize</h3> 
-</div>
-</section>
-    <hr>
-<section>
-     <!--Title on PAge under hero image-->
-    <h2 id="welcome" class="margin">Contact us or come find us</h2>
-    <hr>
-    <div class="container">
-        <!--contact form-->
-        <div class="col-md-6 contact-container" aria-labelledby="contact-form">
-            <form id="contact-form">
-                <label for="fullName">Name</label>
-                <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
-                <label for="eMail">Email</label>
-                <input type="email" id="eMail" name="eMail" placeholder="Please enter your email">
-                <label for="mobile">Mobile</label>
-                <input type="text" id="mobile" name="mobile" placeholder="Please enter your mobile number">
-                <label for="contacting">Contacting us in regards to?</label>
-                <select id="contacting" name="contacting">
-                    <option value="introduction-classes">Introduction Classes</option>
-                    <option value="pregnancy-yoga">Pregnancy Yoga</option>
-                    <option value="meditation-classes">Meditation Classes</option>
-                    <option value="teacher-training-classes">Teacher Training Classes</option>
-                    <option value="general-enquiry">General Enquiry</option>
-                </select>
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Enter your comments here for contacting us....." style="height:200px"></textarea>
-                <input type="submit" value="Submit">
-            </form>
-        </div>
-            <!--Google Maps for studio location, just picked a random yoga studio for refrence. I took the map from google maps and copied the embeded code and aded it to the grid container-->
-        <div>
-            <div class="map" aria-labelledby="find-us">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" id="find-us"></iframe>
-                <br />
-                <strong>Due to Covid-19 our studios are currently closed.</strong>
+         </nav>
+      </header>
+      <hr>
+      <!--Hero image-->
+      <section id="hero-outer">
+         <div id="hero-rest"></div>
+         <!--Text In Hero Image-->
+         <div id="cover-text">
+            <h3>Restore & Revitalize</h3>
+         </div>
+      </section>
+      <hr>
+      <section>
+         <!--Title on PAge under hero image-->
+         <h2 id="welcome" class="margin">Contact us or come find us</h2>
+         <hr>
+         <div class="container">
+            <!--contact form-->
+            <div class="col-md-6 contact-container" aria-labelledby="contact-form">
+               <form id="contact-form">
+                  <label for="fullName">Name</label>
+                  <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
+                  <label for="eMail">Email</label>
+                  <input type="email" id="eMail" name="eMail" placeholder="Please enter your email">
+                  <label for="mobile">Mobile</label>
+                  <input type="text" id="mobile" name="mobile" placeholder="Please enter your mobile number">
+                  <label for="contacting">Contacting us in regards to?</label>
+                  <select id="contacting" name="contacting">
+                     <option value="introduction-classes">Introduction Classes</option>
+                     <option value="pregnancy-yoga">Pregnancy Yoga</option>
+                     <option value="meditation-classes">Meditation Classes</option>
+                     <option value="teacher-training-classes">Teacher Training Classes</option>
+                     <option value="general-enquiry">General Enquiry</option>
+                  </select>
+                  <label for="subject">Subject</label>
+                  <textarea id="subject" name="subject" placeholder="Enter your comments here for contacting us....." style="height:200px"></textarea>
+                  <input type="submit" value="Submit">
+               </form>
             </div>
-        </div> 
-    </div>       
-        <br />
-        <hr>
-</section>
-    <footer class="footer">     
-           <!--Footer links for face book, instagram, and email. I got the icons from fontawesome-->
-        <a href="https://www.instagram.com/radicaltransformationyoga/" aria-label="Go to our instagram page" target="_blank"> <i class="fab fa-instagram fa-3x" ></i> </a>               
-        <a href="https://www.facebook.com/Radicaltransformationyoga" aria-label="Go to our facebook page" target="_blank"> <i class="fab fa-facebook-square fa-3x"></i> </a>   
-        <a href="mailto:angus.friel.1986@gmail.com" aria-label="Send us an email" target="_blank"> <i class="far fa-envelope fa-3x"></i> </a>        
-    </footer>
-</body>
+            <!--Google Maps for studio location, just picked a random yoga studio for refrence. I took the map from google maps and copied the embeded code and aded it to the grid container-->
+            <div>
+               <div class="map" aria-labelledby="find-us">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.3408981544208!2d-9.038801684025193!3d53.283428187123086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b96c11fca891b%3A0xb824d745fb86e53e!2sBikram%20HOT%20YOGA%20Galway!5e0!3m2!1sen!2sie!4v1625046615885!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" id="find-us"></iframe>
+                  <br />
+                  <strong>Due to Covid-19 our studios are currently closed.</strong>
+               </div>
+            </div>
+         </div>
+         <br />
+         <hr>
+      </section>
+      <footer class="footer">
+         <!--Footer links for face book, instagram, and email. I got the icons from fontawesome-->
+         <a href="https://www.instagram.com/radicaltransformationyoga/" aria-label="Go to our instagram page" target="_blank"> <i class="fab fa-instagram fa-3x" ></i> </a>               
+         <a href="https://www.facebook.com/Radicaltransformationyoga" aria-label="Go to our facebook page" target="_blank"> <i class="fab fa-facebook-square fa-3x"></i> </a>   
+         <a href="mailto:angus.friel.1986@gmail.com" aria-label="Send us an email" target="_blank"> <i class="far fa-envelope fa-3x"></i> </a>        
+      </footer>
+   </body>
 </html>
