added action to contact form

--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
          <hr>
          <div class="container">
             <!--contact form-->
-            <div class="col-md-6 contact-container" aria-labelledby="contact-form">
-               <form id="contact-form">
+            <div class="contract-container" aria-labelledby="contact-form">
+               <form id="contact-form" action="https://formdump.codeinstitute.net/" method="POST">
                   <label for="fullName">Name</label>
                   <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
                   <label for="eMail">Email</label>
