added UX to readme

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
          <nav id="nav">                    
             <a href="courses.html" aria-label="Go to the courses page">Courses</a>
             <a href="teachers.html" aria-label="Go to the instructors page" class="col">Teachers</a>
-            <a href="contact.html" aria-label="Go to the contact or sign up page">Contact</a>          
+            <a href="contact.html" aria-label="Go to the contact or sign-up page">Contact</a>          
          </nav>
       </header>
       <hr>
@@ -39,12 +39,12 @@
       </section>
       <hr>
       <section>
-         <!--Title on PAge under hero image-->
+         <!--Title on Page under hero image-->
          <h2 id="welcome" class="margin">Contact us or come find us</h2>
          <hr>
          <div class="container">
             <!--contact form-->
-            <div class="contract-container" aria-labelledby="contact-form">
+            <div class="contact-container" aria-labelledby="contact-form">
                <form id="contact-form" action="https://formdump.codeinstitute.net/" method="POST">
                   <label for="fullName">Name</label>
                   <input type="text" id="fullName" name="fullName" placeholder="Please enter your full name.">
@@ -85,3 +85,4 @@
       </footer>
    </body>
 </html>
+
