--- a/courses.html
+++ b/courses.html
@@ -25,7 +25,7 @@
          <nav id="nav">                     
             <a href="courses.html" aria-label="Go to the courses page">Courses</a>
             <a href="teachers.html" aria-label="Go to the instructors page" class="col">Teachers</a>
-            <a href="contact.html" aria-label="Go to the contact or sign up page">Contact</a>          
+            <a href="contact.html" aria-label="Go to the contact or sign-up page">Contact</a>          
          </nav>
       </header>
       <hr>
@@ -117,7 +117,7 @@
                   </picture>
                   <br />
                   <a href="contact.html">
-                     <p class="signup">Click to Sign Up!</p>
+                     <p class="signup">Click to Sign Up! </p>
                   </a>
                </div>
             </div>
@@ -125,7 +125,7 @@
       </section>
       <section class="margin">
          <!--heading for videos-->
-         <p id="teach2">Try it out for yourself!</p>
+         <p id="teach2">Try it out for yourself! </p>
          <hr>
          <br />
          <div class="flex-container" >
@@ -136,7 +136,7 @@
                <iframe src="https://www.youtube.com/embed/4C-gxOE0j7s" title="YouTube video player" allowfullscreen></iframe>
                <p>5 Min Morning Yoga With Adriene. Don't have a lot of time? Take 5 to promote healthy flow of energy so that you can do your best, be authentic and Find What Feels Good! </p>
             </div>
-            <!--info for sceond video-->
+            <!--info for second video-->
             <div class="video">
                <h3>12 Minute Core Conditioning</h3>
                <br />
@@ -154,3 +154,4 @@
       </footer>
    </body>
 </html>
+
