--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <nav id="nav">                      
             <a href="courses.html" aria-label="Go to the courses page" class="col">Courses</a>
             <a href="teachers.html" aria-label="Go to the instructors page" class="col">Teachers</a>
-            <a href="contact.html" aria-label="Go to the contact or sign up page" class="col">Contact</a>                  
+            <a href="contact.html" aria-label="Go to the contact or sign-up page" class="col">Contact</a>                  
          </nav>
       </header>
       <hr>
@@ -39,7 +39,7 @@
       </section>
       <hr>
       <section id="ethos">
-         <!--Title on PAge under hero image-->
+         <!--Title on Page under hero image-->
          <h2 id="welcome" class="margin">Yoga Power!</h2>
          <hr>
          <section class="margin">
@@ -56,7 +56,7 @@
                   <p>Yoga is an ancient form of exercise that focuses on strength, flexibility and breathing to boost physical and mental wellbeing. 
                      The main components of yoga are postures (a series of movements designed to increase strength and flexibility) and breathing.
                      The practice originated in India about 5,000 years ago and has been adapted in other countries in a variety of ways.
-                     Yoga is now commonplace in leisure centres, health clubs, schools, hospitals and surgeries.
+                     Yoga is now commonplace in leisure centres, health clubs, schools, hospitals, and surgeries.
                   </p>
                   <br />
                   <p>
@@ -87,13 +87,13 @@
                      relaxes the mind; centers attention; and sharpens concentration,” says Dr. Nevins. 
                   </p>
                   <br />
-                  <p class ="doing-yoga">If you’re a passionate yoga practitioner, you’ve probably noticed the benefits of yoga. Maybe you’re sleeping better or getting fewer colds or 
-                     just feeling more relaxed and at ease. But if you’ve ever tried telling a newbie about the benefits of yoga, you might find that explanations like 
+                  <p class ="doing-yoga">If you are a passionate yoga practitioner, you’ve probably noticed the benefits of yoga. Maybe you are sleeping better or getting fewer colds or 
+                     just feeling more relaxed and at ease. But if you have ever tried telling a newbie about the benefits of yoga, you might find that explanations like 
                      “It increases the flow of prana” or “It brings energy up your spine” fall on deaf or skeptical ears.  
                   </p>
                   <br />                                      
                   <p class ="doing-yoga">As it happens, Western science is starting to provide some concrete clues as to how yoga works to improve health, heal aches and pains, and keep sickness at bay.
-                     Once you understand them, you’ll have even more motivation to step onto your mat, and you probably won’t feel so tongue-tied the next time someone wants Western proof.
+                     Once you understand them, you will have even more motivation to step onto your mat, and you probably won’t feel so tongue-tied the next time someone wants Western proof.
                   </p>
                </div>
                <!--image in circle next to Why do Yoga-->
@@ -113,3 +113,4 @@
       </footer>
    </body>
 </html>
+
