--- a/teachers.html
+++ b/teachers.html
@@ -95,8 +95,8 @@
                <!--bio of instructor-->
                <p class="teach-text" id="keith-yoga-instructor">Keith has practiced yoga for 20 years since sustaining a back injury from weight training. The concept of intertwining the breath and fluid movement drew him to the 
                   Ashtanga Vinyasa style of practice. In 2003, Keith decided to travel to Mysore in India, where he spent several months studying with BKS Iyengar. Following his return, 
-                  he qualified as a 200-Hour teacher in 2006 with YogaTherapy Ireland. Since then Keith has completed the YogaAlliance.org 500hr Advanced Teacher training with 
-                  The YogaRoom in 2013. Since then Keith has practiced and taught many styles of Yoga. His teaching style greatly values the importance of variety in sequences to 
+                  he qualified as a 200-Hour teacher in 2006 with YogaTherapy Ireland. Since then, Keith has completed the YogaAlliance.org 500hr Advanced Teacher training with 
+                  The YogaRoom in 2013. Since then, Keith has practiced and taught many styles of Yoga. His teaching style greatly values the importance of variety in sequences to 
                   explore asana in different ways, whilst always honouring the breath. Keith encourages each student to find their own level within a sequence and incorporate mindfulness 
                   n the practice. Keith continually seeks to improve and refine his teaching skills, regularly undertaking training courses with talented teachers. Most recently 
                   Keith has started learning from Rod Stryker of the Para Yoga lineage. Keith considers himself an “energy-centered practitioner” and focuses on helping students find the flow of energy in 
@@ -132,16 +132,16 @@
             </div>
             <div class="wide">
                <!--bio of instructor-->
-               <p class="teach-text" id="sara-yoga-instructor">Sara is a qualified life coach and yoga teacher. Her classes incorporate her wide ranging experience in yoga, Somatic studies, dance, voicework, self-enquiry and 
-                  meditation. Sara has studied Scaravelli yoga with Rosella Baronchini and completed an Anusara teacher training with Sianna Sherman, recently she has studied 
+               <p class="teach-text" id="sara-yoga-instructor">Sara is a qualified life coach and yoga teacher. Her classes incorporate her wide-ranging experience in yoga, Somatic studies, dance, voicework, self-enquiry and 
+                  meditation. Sara has studied Scaravelli yoga with Rosella Baronchini and completed an Anusara teacher training with Sianna Sherman, recently she has studied. 
                   extensively in the Katonah yoga method. She began to meditate nine years ago during her teacher training, a practice that has taught her acceptance, humility and 
                   worthiness in equal measure. “That moment of Grace offered me a practice that transformed my life and taught me that our natural state is limitless freedom and 
-                  overflowing wellbeing and that changes everything”. Mari’s teachings reveal how self inquiry and mindbody wisdom can help us navigate change and uncertainty and 
+                  overflowing wellbeing and those changes everything”. Mari’s teachings reveal how self inquiry and mindbody wisdom can help us navigate change and uncertainty and 
                   reclaiming the sacredness of life. As she scans the room for misalignments and energetic blockages, Sara, who has graced the cover and pages of this magazine many 
                   times with her stunning poses, will reach for a block or a strap to modify a pose if a student needs it. “Props work well for people who have injuries, and they’re 
                   good for preventing injuries,” she says. “If you see someone pushing too hard or moving too fast, you have to pull them back sometimes.” Sara studied Ashtanga Yoga 
                   in India with K. Pattabhi Jois but learned to modify poses from her primary teachers, Chuck Miller and Maty Ezraty.
-                  As a small girl, Sara learned Sun Salutations from her mom, and she began taking yoga classes at 18. When she found Miller and Ezraty in her early 20s, she spent the next 10 years at YogaWorks in Ezraty’s class six days per week. To this day she calls Ezraty her “second mom.” Cruz cherishes the individual attention she’s able to offer in her Mysore room. “I do something different with every student,” she says. “I get one-on-one time with all of them, and I get to design a practice that’s good for them individually, which is how yoga was meant to be taught.” And she hopes to give her students the
+                  As a small girl, Sara learned Sun Salutations from her mom, and she began taking yoga classes at 18. When she found Miller and Ezraty in her early 20s, she spent the next 10 years at YogaWorks in Ezraty’s class six days per week. To this day she calls Ezraty her “second mom.” Cruz cherishes the individual attention she is able to offer in her Mysore room. “I do something different with every student,” she says. “I get one-on-one time with all of them, and I get to design a practice that’s good for them individually, which is how yoga was meant to be taught.” And she hopes to give her students the
                   tools to practice in a way that’s safe and healing for them. “That’s my job as a teacher—to nurture students until they can go out and fly on their own.”
                </p>
             </div>
@@ -173,3 +173,4 @@
       </footer>
    </body>
 </html>
+
