--- a/courses.html
+++ b/courses.html
@@ -124,10 +124,12 @@
          </div>
       </section>
       <section class="margin">
-         <!--heading for videos-->
-         <p id="teach2">Try it out for yourself! </p>
-         <hr>
-         <br />
+         <div>
+            <!--heading for videos-->
+            <p id="teach2">Try it out for yourself! </p>
+            <hr>
+            <br />
+         </div>
          <div class="flex-container" >
             <div class="video">
                <!--info for first video-->
@@ -143,9 +145,9 @@
                <iframe src="https://www.youtube.com/embed/8T39OBNaNzU" title="YouTube video player" allowfullscreen></iframe>
                <p>Two words, FLOOR CORE. Take 12 minutes to build connection to center while strengthening and toning your abdominal muscles. </p>
             </div>
-            <hr>
-         </div>   
+         </div>          
       </section>
+      <hr> 
       <footer class="footer">
          <!--Footer links for face book, instagram, and email. I got the icons from fontawesome-->
          <a href="https://www.instagram.com/radicaltransformationyoga/" aria-label="Go to our instagram page" target="_blank"> <i class="fab fa-instagram fa-3x" ></i> </a>               
